--- a/src/main/resources/com/example/midivideomapper/video-player.fxml
+++ b/src/main/resources/com/example/midivideomapper/video-player.fxml
@@ -7,32 +7,38 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.midivideomapper.VideoPlayerController">
+<BorderPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.midivideomapper.VideoPlayerController">
    <bottom>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox alignment="CENTER" prefHeight="88.0" prefWidth="850.0">
+            <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Slider fx:id="timeSlider" onMousePressed="#sliderPressed" prefHeight="16.0" prefWidth="563.0" HBox.hgrow="ALWAYS">
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="311.0" spacing="10.0">
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#selectVideo" text="Select Video" />
+                        <Button fx:id="btnPlay" mnemonicParsing="false" onMouseClicked="#btnPlay" text="Play" />
+                        <Label fx:id="labelDuration" text="Duration: 00 / 00" />
+                     </children>
+                  </HBox>
+                  <Slider fx:id="timeSlider" onMousePressed="#sliderPressed" prefHeight="99.0" prefWidth="459.0" HBox.hgrow="ALWAYS">
                      <padding>
                         <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
                      </padding>
                   </Slider>
                </children>
             </HBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
-               <children>
-                  <Button mnemonicParsing="false" onAction="#selectVideo" text="Select Video" />
-                  <Button fx:id="btnPlay" mnemonicParsing="false" onMouseClicked="#btnPlay" text="Play" />
-                  <Label fx:id="labelDuration" text="Duration: 00 / 00" />
-               </children>
-            </HBox>
+            <HBox alignment="CENTER" prefHeight="88.0" prefWidth="850.0" />
          </children>
       </VBox>
    </bottom>
-   <center>
-      <ImageView fx:id="imageView" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
-   </center>
+   <top>
+      <Pane fx:id="imageContainer" prefHeight="543.0" prefWidth="850.0" BorderPane.alignment="CENTER">
+         <children>
+            <ImageView fx:id="imageView" fitHeight="523.0" fitWidth="821.0" layoutX="14.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true" />
+         </children>
+      </Pane>
+   </top>
 </BorderPane>
